# unity-plugin

./: Cargo.toml  LICENSE  README.md
RustNativePlugin-Unity/Assets/: UseRenderingPlugin.cs
RustNativePlugin-Unity/Assets/Plugins/: README.md
RustNativePlugin-Unity/Assets/Scenes/: SampleScene.unity
RustNativePlugin-Unity/ProjectSettings/: ProjectSettings.asset
src/: lib.rs  unity.rs  unity_graphics.rs  unity_graphics_d3d11.rs  unity_interface.rs  unity_xr_trace.rs
unity3d-sys/: Cargo.toml
unity3d-sys/src/: lib.rs  unity_graphics.rs  unity_graphics_d3d11.rs  unity_interface.rs  unity_rendering_extensions.rs  unity_xr_trace.rs
