[package]
name = "unity-plugin"
version = "0.1.0"
authors = ["ArmsOfSorrow"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["d3d11"] }

[lib]
crate-type = ["cdylib"]