[package]
name = "unity-plugin"
version = "0.1.0"
authors = ["Krzysztof Lesiak <wave.dev@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unity3d-sys = { path = "unity3d-sys" }

[lib]
crate-type = ["cdylib"]

# To use d3d11 we need/want winapi. By default Rust doesn't allow us to use implicit sub-dependencies.
# Here's an SO answer: https://stackoverflow.com/a/62944331
# We can try reexporting winapi from unity3d-sys for now. Or at least some types.