[package]
name = "unity3d-sys"
version = "0.1.0"
authors = ["Krzysztof Lesiak <wave.dev@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["d3d11"] }